Fix UI alignments: Header > Breadcrumbs > Content

--- a/public/sass/bento/bootstrap_overrides.scss
+++ b/public/sass/bento/bootstrap_overrides.scss
@@ -154,7 +154,8 @@ input[type="color"],
 }
 
 #subheader {
-  margin: 0 0 10px 0;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .table {
